# OSASP

Course Project/: CMakeLists.txt
Course Project/headers/: find.h  history.h  include.h  operations.h  ui.h
Course Project/src/: find.c  history.c  main.c  operations.c  ui.c
lab1/: CMakeLists.txt  README.md
lab1/src/: dirwalk.h  main.c  walk_directory.c
lab2/: CMakeLists.txt  README.txt  child.c  env  parent.c
lab4/: CMakeLists.txt  main.c
